--- a/index.html
+++ b/index.html
@@ -8,7 +8,22 @@
     <title>Water Dog | Web Design</title>
   </head>
   <body>
-    <h1>BEN OUR WEBSITE IS UP!!</h1>
-    <p>Test Text</p>
+    <header>
+      <nav class="nav">
+        <div class="company">
+          <a href="">Logo</a>
+          <span class="company-name">Water Dog Web Design</span>
+        </div>
+
+        <ul class="navbar">
+          <li class="nav-item"><a href="" class="nav-link">Home</a></li>
+          <li class="nav-item"><a href="" class="nav-link">About</a></li>
+          <li class="nav-item"><a href="" class="nav-link">Services</a></li>
+          <li class="nav-item">
+            <a href="" class="nav-link nav-link--button">Contact</a>
+          </li>
+        </ul>
+      </nav>
+    </header>
   </body>
 </html>
