--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
+    <script
+      src="https://kit.fontawesome.com/fdc7a1b998.js"
+      crossorigin="anonymous"
+    ></script>
     <title>Water Dog | Web Design</title>
   </head>
   <body>
