Added hero section and html for cards

--- a/index.html
+++ b/index.html
@@ -29,6 +29,39 @@
         </ul>
       </nav>
     </header>
-    <h1>HELLO</h1>
+    <section class="hero">
+      <div class="hero-img">
+        <h1 class="hero-title">
+          Helping Small Businesses Develop Their Internet Presence
+        </h1>
+      </div>
+    </section>
+
+    <section class="services">
+      <div class="card">
+        <h2 class="card-title">Responsive</h2>
+        <p class="card-text">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni,
+          laudantium molestiae omnis dicta consectetur facilis deserunt culpa
+          unde harum delectus.
+        </p>
+      </div>
+      <div class="card">
+        <h2 class="card-title">Optimized</h2>
+        <p class="card-text">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni,
+          laudantium molestiae omnis dicta consectetur facilis deserunt culpa
+          unde harum delectus.
+        </p>
+      </div>
+      <div class="card">
+        <h2 class="card-title">Fast</h2>
+        <p class="card-text">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni,
+          laudantium molestiae omnis dicta consectetur facilis deserunt culpa
+          unde harum delectus.
+        </p>
+      </div>
+    </section>
   </body>
 </html>
